completed project by adding in some flex elements and fixing some spacing

--- a/index.css
+++ b/index.css
@@ -57,7 +57,7 @@ table {
   #yosemite img{
 	border: 4px solid transparent;   
 	border-radius: 50%;
-	width: 20%;
+	width: 30%;
   }
   .visit{
 	text-decoration:none;
@@ -71,10 +71,29 @@ table {
   h1{
 	font-family: chelsea market;
 	text-align: center; 
-	margin: auto; 
+	margin: auto;
+	padding-bottom: 60px; 
+	font-size: 3rem; 
+  }
+  h3{
+	  padding-top: 20px; 
+	  padding-bottom: 30px; 
+	  text-align: center; 
   }
   section {
 	background-color: #DDB9A3;
+	text-align: center; 
+	color: white; 
+  }
+  .firep{
+	  text-align: center; 
+	  color: black; 
+	  background-color: white; 
+  }
+  #reserve{
+	  text-align: center; 
+	  margin: auto; 
+	  padding-top: 1rem; 
   }
   footer {
 	background-color: #F9E7DC;
@@ -90,7 +109,7 @@ table {
 }
 
 #fire img{
-	width: 10%; 
+	width: 15%; 
 	border: 4px solid transparent; 
 	height: auto; 
 	display: block; 
@@ -98,7 +117,7 @@ table {
 	margin-right: auto; 
 }
 #truck img{
-	width: 10%;
+	width: 20%;
 	border: 4px solid transparent; 
 	display: block; 
 	margin-left: auto;
@@ -107,10 +126,10 @@ table {
 }
 #footerp img{
 	width: 100%;
-	height: 10%;
+	height: 10%; 
 	border: 4px solid transparent; 
-	padding-top: 4rem; 
-	padding-bottom: 1rem; 
+	padding-top: 3rem; 
+	padding-bottom: .5rem;  
 } 
 
 .orangebutton{
@@ -118,30 +137,35 @@ table {
 	border: 3px solid transparent;
 	border-radius: 25px; 
 	background-color: #FF764E;
-	margin-left: 10%;
+	/* margin-left: 10%;
 	margin-right: 10%;  
 	margin-top: 10px; 
-	height: auto; 
+	height: auto;  */
 }
 .bluebutton{
 	width: 100px; 
 	border: 3px solid transparent; 
 	border-radius: 25px;
 	background-color: #5ED3EB;
-	margin-left: 40px;
+	/* margin-left: 40px;
 	margin-right: 40px; 
 	margin-top: 10px; 
 	margin-bottom: 20px; 
-	height: auto; 
+	height: auto;  */
 }
 .yellowbutton{
 	width: 100px;
 	border: 3px solid transparent; 
 	border-radius: 25px; 
 	background-color: #FFCD69;
-	margin-left: 30%;
+	/* margin-left: 30%;     
 	margin-right: auto; 
-	height: auto; 
+	height: auto; */
 }
+.container{     /* used flex as advised by TL to practice skills for upcoming sprint.*/
+	display: flex; 
+	justify-content: space-evenly; 
+}
+
 
   
